# JOBS.wasfai.com

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_HANDOFF.md  README.md  VERSION.json  VERSIONS.md  package.json
functions/: _middleware.js
functions/api/: _subscriptions.js  export-package.js  ghostwriter.js
memory/: 2026-07-11.md  2026-07-13.md  2026-07-14.md  2026-07-23.md
public/: _redirects  admin.css  admin.js  app.js  pricing.css  pricing.js  styles.css  sw.js
public/pricing/: index.html
public/super-admin/: index.html
qa/: admin-smoke.spec.js  authenticated.config.js  interaction-check.spec.js
src/: lib.rs
versions/jobs1/: package-lock.json
versions/jobs10/: DATA_CONTRACT.md  README.md
versions/jobs11/: package.json
versions/jobs12/: README.md
versions/jobs13/: README.md  package.json
versions/jobs14/: README.md
versions/jobs16/: README.md
versions/jobs17/: package.json
versions/jobs19/: package.json
versions/jobs2/: package.json
versions/jobs28/: package.json
versions/jobs29/: DEPLOYMENT_HANDOFF.md
versions/jobs3/: DATA_CONTRACT.md  package.json
versions/jobs4/: DEPLOYMENT_HANDOFF.md  README.md
versions/jobs40/: package.json
versions/jobs41/: DEPLOYMENT_HANDOFF.md  package.json
versions/jobs50/: Cargo.toml
versions/jobs50/functions/api/: ai-health.js
versions/jobs50/functions/api/auth/: qa.js
versions/jobs50/functions/api/auth/google/: callback.js
versions/jobs50/public/: app.js  sw.js
versions/jobs50/qa/: authenticated-journey.spec.js
versions/jobs50/workers/pdf-renderer/: package.json
(+222 files in other folders)
