[package]
name = "mena-job-command-center"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing-subscriber = "0.3"
typst = "0.15"
typst-as-lib = "0.16"
typst-pdf = "0.15"

[dev-dependencies]
tower = "0.5"
